--- a/config/crescenttool/default/core.entity_view_display.node.product.set_listing.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.set_listing.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -48,6 +49,7 @@ hidden:
   field_media: true
   field_meta_tags: true
   field_new_product: true
+  field_pdfs: true
   field_product_classifications: true
   field_product_features: true
   field_product_images: true
