--- a/config/crescenttool_au/default/core.entity_form_display.node.product.default.yml
+++ b/config/crescenttool_au/default/core.entity_form_display.node.product.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -35,8 +36,8 @@ third_party_settings:
     group_tabs:
       children:
         - group_main
-        - group_content
         - group_pim_data
+        - group_content
       label: Tabs
       region: content
       parent_name: ''
@@ -53,6 +54,10 @@ third_party_settings:
         - field_trade
         - body
         - field_media
+        - field_new_product
+        - field_featured_product
+        - field_launch_date
+        - field_keywords
       label: Main
       region: content
       parent_name: group_tabs
@@ -69,7 +74,7 @@ third_party_settings:
       label: Content
       region: content
       parent_name: group_tabs
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         classes: ''
@@ -86,13 +91,14 @@ third_party_settings:
         - field_product_specifications
         - field_product_classifications
         - field_product_images
+        - field_pdfs
         - field_set
         - field_set_components
-        - field_keywords
+        - field_related_products
       label: 'PIM Data'
       region: content
       parent_name: group_tabs
-      weight: 3
+      weight: 2
       format_type: tab
       format_settings:
         classes: ''
@@ -131,14 +137,14 @@ content:
     third_party_settings: {  }
   field_featured_product:
     type: boolean_checkbox
-    weight: 11
+    weight: 7
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_keywords:
     type: string_textarea
-    weight: 24
+    weight: 9
     region: content
     settings:
       rows: 5
@@ -146,13 +152,13 @@ content:
     third_party_settings: {  }
   field_launch_date:
     type: datetime_default
-    weight: 14
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   field_long_description:
     type: string_textfield
-    weight: 17
+    weight: 16
     region: content
     settings:
       size: 60
@@ -174,40 +180,23 @@ content:
     region: content
     settings:
       sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_new_product:
     type: boolean_checkbox
-    weight: 10
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
-  field_product_classifications:
-    type: entity_reference_autocomplete
-    weight: 20
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_product_features:
-    type: string_textfield
-    weight: 18
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_product_images:
+  field_pdfs:
     type: media_library_widget
     weight: 21
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
-  field_product_specifications:
+  field_product_classifications:
     type: entity_reference_autocomplete
     weight: 19
     region: content
@@ -217,9 +206,34 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_product_features:
+    type: string_textfield
+    weight: 17
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_product_images:
+    type: media_library_widget
+    weight: 20
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+  field_product_specifications:
+    type: entity_reference_autocomplete
+    weight: 18
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_related_products:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 24
     region: content
     settings:
       match_operator: CONTAINS
