--- a/config/crescenttool_au/default/core.entity_view_display.node.product.default.yml
+++ b/config/crescenttool_au/default/core.entity_view_display.node.product.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -29,7 +30,16 @@ id: node.product.default
 targetEntityType: node
 bundle: product
 mode: default
-content: {  }
+content:
+  field_pdfs:
+    type: entity_reference_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   body: true
   field_brand: true
