--- a/config/crescenttool_au/default/core.entity_view_display.node.product.full.yml
+++ b/config/crescenttool_au/default/core.entity_view_display.node.product.full.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -128,6 +129,7 @@ hidden:
   field_launch_date: true
   field_meta_tags: true
   field_new_product: true
+  field_pdfs: true
   field_product_classifications: true
   field_related_products: true
   field_set: true
