--- a/config/sata_colombia/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/sata_colombia/default/core.entity_view_display.node.product.teaser.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -92,6 +93,7 @@ hidden:
   field_launch_date: true
   field_meta_tags: true
   field_new_product: true
+  field_pdfs: true
   field_product_classifications: true
   field_product_features: true
   field_product_images: true
