--- a/config/sata_us/default/core.entity_form_display.node.product.default.yml
+++ b/config/sata_us/default/core.entity_form_display.node.product.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -37,8 +38,8 @@ third_party_settings:
     group_tabs:
       children:
         - group_main
-        - group_content
         - group_pim_data
+        - group_content
       label: Tabs
       region: content
       parent_name: ''
@@ -56,9 +57,8 @@ third_party_settings:
         - field_media
         - field_new_product
         - field_featured_product
-        - field_related_products
-        - field_keywords
         - field_launch_date
+        - field_keywords
       label: Main
       region: content
       parent_name: group_tabs
@@ -76,7 +76,7 @@ third_party_settings:
       label: Content
       region: content
       parent_name: group_tabs
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         classes: ''
@@ -93,12 +93,14 @@ third_party_settings:
         - field_product_specifications
         - field_product_classifications
         - field_product_images
+        - field_pdfs
         - field_set
         - field_set_components
+        - field_related_products
       label: 'PIM Data'
       region: content
       parent_name: group_tabs
-      weight: 3
+      weight: 2
       format_type: tab
       format_settings:
         classes: ''
@@ -167,7 +169,7 @@ content:
     third_party_settings: {  }
   field_keywords:
     type: string_textarea
-    weight: 8
+    weight: 9
     region: content
     settings:
       rows: 5
@@ -175,7 +177,7 @@ content:
     third_party_settings: {  }
   field_launch_date:
     type: datetime_default
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -211,6 +213,13 @@ content:
     region: content
     settings:
       display_label: true
+    third_party_settings: {  }
+  field_pdfs:
+    type: media_library_widget
+    weight: 21
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
   field_product_classifications:
     type: entity_reference_autocomplete
@@ -249,7 +258,7 @@ content:
     third_party_settings: {  }
   field_related_products:
     type: entity_reference_autocomplete
-    weight: 7
+    weight: 24
     region: content
     settings:
       match_operator: CONTAINS
@@ -259,14 +268,14 @@ content:
     third_party_settings: {  }
   field_set:
     type: boolean_checkbox
-    weight: 21
+    weight: 22
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   field_set_components:
     type: entity_reference_autocomplete
-    weight: 22
+    weight: 23
     region: content
     settings:
       match_operator: CONTAINS
