Added path and url values back to sata.settings

--- a/config/sata_brazil/default/sata.settings.yml
+++ b/config/sata_brazil/default/sata.settings.yml
@@ -10,9 +10,9 @@ favicon:
   path: 'public://tagline-br_0.svg'
   mimetype: image/svg+xml
 logo_tagline:
-  path: ''
+  path: 'public://tagline-br.svg'
   use_default: 0
-  url: ''
+  url: '/sites/sata_brazil/files/tagline-br.svg'
 enable_w1_grid: 1
 price_spider_hide: 0
 price_spider_generic_key: ''
