--- a/config/sata_colombia/default/sata.settings.yml
+++ b/config/sata_colombia/default/sata.settings.yml
@@ -10,9 +10,9 @@ favicon:
   path: 'public://tagline-co_0.svg'
   mimetype: image/svg+xml
 logo_tagline:
-  path: ''
+  path: 'public://tagline-co_0.svg'
   use_default: 0
-  url: ''
+  url: '/sites/sata_colombia/files/tagline-co_0.svg'
 enable_w1_grid: 0
 price_spider_hide: 0
 price_spider_generic_key: ''
