--- a/config/sata_emea/default/sata.settings.yml
+++ b/config/sata_emea/default/sata.settings.yml
@@ -17,6 +17,6 @@ price_spider_country: ''
 price_spider_language: ''
 cookiebot_cbid: f12d9173-af9f-4af9-ab43-74bb59153770
 logo_tagline:
-  path: ''
+  path: 'public://tagline-eu_1.svg'
   use_default: 0
-  url: ''
+  url: '/sites/sata_emea/files/tagline-eu_1.svg'
