--- a/config/sata_us/default/sata.settings.yml
+++ b/config/sata_us/default/sata.settings.yml
@@ -16,8 +16,8 @@ price_spider_country: ''
 price_spider_language: ''
 price_spider_product_key: ''
 logo_tagline:
-  path: ''
+  path: 'public://tagline-us.svg'
   use_default: 0
-  url: ''
+  url: '/sites/sata_us/files/tagline-us.svg'
 enable_w1_grid: 0
 cookiebot_cbid: ''
