bugfix/new-import-issues: Fixed problems with the product description not loading from the group level and fixed missing brand for CT NA.

--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_products.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_products.yml
@@ -99,6 +99,10 @@ source:
       label: Keywords
       selector: './/*[@AttributeID=''ATT737269'']'
     -
+      name: remote_brand
+      label: Brand
+      selector: './/*[@AttributeID=''Brand'']'
+    -
       name: remote_sales_org_status
       label: 'Sales Org Status'
       selector: './/*[@AttributeID=''SAP_SALES_ORG_STATUS'']'
