feature/sata-br_add_specs: Made sure to add one more facet to it.

--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_specifications.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_specifications.yml
@@ -224,6 +224,7 @@ process:
         - ATT755881
         - ATT263
         - ATT744972
+        - ATT779365
     -
       plugin: concat
       source:
