--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_products.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_products.yml
@@ -365,6 +365,7 @@ process:
       - ATT755881
       - ATT263
       - ATT744972
+      - ATT779365
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
