--- a/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_specifications.yml
+++ b/config/sata_colombia/default/migrate_plus.migration.sata_colombia_product_specifications.yml
@@ -45,20 +45,177 @@ process:
       method: row
       source: remote_term_id
       value:
-        - ATT948
-        - ATT493
-        - ATT584466
-        - ATT744972
-        - ATT755881
-        - ATT687593
-        - ATT345
-        - ATT425
+        - ATT128
+        - ATT130
+        - ATT145
+        - ATT16694
         - ATT176
-        - ATT435
-        - ATT673673
-        - ATT497
+        - ATT17711
+        - ATT179
+        - ATT185
+        - ATT19800
+        - ATT225
+        - ATT249
+        - ATT250
+        - ATT258
+        - ATT263
+        - ATT339
+        - ATT344
+        - ATT345
+        - ATT375
+        - ATT414
         - ATT420
+        - ATT425
+        - ATT428
+        - ATT451
+        - ATT476
+        - ATT479
+        - ATT484
+        - ATT491
+        - ATT493
+        - ATT497
+        - ATT498
+        - ATT499
+        - ATT506
+        - ATT531
+        - ATT533
+        - ATT535
+        - ATT537
+        - ATT544
+        - ATT551
+        - ATT552
+        - ATT563
+        - ATT583
+        - ATT583415
+        - ATT584374
+        - ATT584376
+        - ATT584466
+        - ATT584477
+        - ATT584716
+        - ATT584720
+        - ATT584721
+        - ATT584722
+        - ATT584734
+        - ATT584735
+        - ATT584736
+        - ATT584737
+        - ATT584740
+        - ATT584741
+        - ATT584742
+        - ATT584760
+        - ATT584761
+        - ATT584763
+        - ATT584768
+        - ATT584772
+        - ATT584778
+        - ATT584779
+        - ATT584780
+        - ATT584781
+        - ATT584804
+        - ATT584811
+        - ATT584815
+        - ATT584817
+        - ATT584818
+        - ATT584826
+        - ATT584866
+        - ATT584882
+        - ATT584883
+        - ATT584884
+        - ATT584885
+        - ATT584891
+        - ATT584892
+        - ATT584907
+        - ATT584913
+        - ATT584919
+        - ATT584921
+        - ATT584924
+        - ATT584925
+        - ATT584926
+        - ATT584927
+        - ATT584928
+        - ATT584932
+        - ATT584933
+        - ATT585
+        - ATT606
+        - ATT607
+        - ATT609
+        - ATT659
+        - ATT659426
+        - ATT659434
+        - ATT661605
+        - ATT661950
+        - ATT662
+        - ATT662382
+        - ATT664101
+        - ATT664102
+        - ATT665424
+        - ATT670486
+        - ATT672487
+        - ATT673955
+        - ATT683449
+        - ATT683451
+        - ATT683453
+        - ATT683454
+        - ATT684653
+        - ATT685259
+        - ATT687576
+        - ATT687577
+        - ATT687588
+        - ATT687592
+        - ATT687593
+        - ATT687596
+        - ATT687597
+        - ATT687598
+        - ATT687600
+        - ATT687603
+        - ATT714694
+        - ATT714709
+        - ATT714722
+        - ATT714731
+        - ATT714732
+        - ATT725
+        - ATT726
+        - ATT728214
+        - ATT738
+        - ATT755881
+        - ATT775480
+        - ATT789490
+        - ATT799771
+        - ATT802
+        - ATT803
+        - ATT804086
+        - ATT834
         - ATT835
+        - ATT838020
+        - ATT838030
+        - ATT838034
+        - ATT838036
+        - ATT867472
+        - ATT867475
+        - ATT867573
+        - ATT867575
+        - ATT867577
+        - ATT867580
+        - ATT867581
+        - ATT867582
+        - ATT867585
+        - ATT867587
+        - ATT867592
+        - ATT867594
+        - ATT867595
+        - ATT911
+        - ATT922
+        - ATT923
+        - ATT948
+        - BaseUnitOfMeasure
+        - Catalog Number
+        - COO
+        - DistChannel
+        - Overall Height
+        - Overall Length
+        - UnitsOfMeasure
+        - WeightSAP
+        - ATT779365
     -
       plugin: concat
       source:
