--- a/config/sata_emea/default/config_export_ignore.settings.yml
+++ b/config/sata_emea/default/config_export_ignore.settings.yml
@@ -7,12 +7,14 @@ configuration_names:
   10: 'sata.settings:price_spider_hide'
   12: 'sata.settings:price_spider_generic_key'
   14: 'sata.settings:price_spider_product_key'
-  16: 'sata.settings:price_spider_country'
-  18: 'sata.settings:price_spider_language'
-  20: 'sata.settings:cookiebot_cbid'
-  22: 'sata.settings:favicon.use_default'
-  24: 'sata.settings:favicon.path'
-  26: 'sata.settings:favicon.mimetype'
-  28: 'sata.settings:logo.use_default'
-  30: 'sata.settings:logo.path'
-  32: 'sata.settings:enable_w1_grid'
+  16: 'sata.settings:price_spider_reviews_key'
+  18: 'sata.settings:price_spider_account_key'
+  20: 'sata.settings:price_spider_country'
+  22: 'sata.settings:price_spider_language'
+  24: 'sata.settings:cookiebot_cbid'
+  26: 'sata.settings:favicon.use_default'
+  28: 'sata.settings:favicon.path'
+  30: 'sata.settings:favicon.mimetype'
+  32: 'sata.settings:logo.use_default'
+  34: 'sata.settings:logo.path'
+  36: 'sata.settings:enable_w1_grid'
