--- a/config/sata_emea/default/config_ignore.settings.yml
+++ b/config/sata_emea/default/config_ignore.settings.yml
@@ -8,6 +8,8 @@ ignored_config_entities:
   - 'sata.settings:price_spider_hide'
   - 'sata.settings:price_spider_generic_key'
   - 'sata.settings:price_spider_product_key'
+  - 'sata.settings:price_spider_reviews_key'
+  - 'sata.settings:price_spider_account_key'
   - 'sata.settings:price_spider_country'
   - 'sata.settings:price_spider_language'
   - 'sata.settings:cookiebot_cbid'
