Attempting to fix a search issue.

--- a/config/sata_us/default/search_api.index.acquia_search_index_products.yml
+++ b/config/sata_us/default/search_api.index.acquia_search_index_products.yml
@@ -64,6 +64,7 @@ third_party_settings:
     multilingual:
       limit_to_content_language: false
       include_language_independent: true
+      specific_languages: {  }
 id: acquia_search_index_products
 name: 'Acquia Search Index - Products'
 description: ''
