--- a/config/sata_us/default/search_api.index.acquia_search_index.yml
+++ b/config/sata_us/default/search_api.index.acquia_search_index.yml
@@ -66,6 +66,7 @@ third_party_settings:
     multilingual:
       limit_to_content_language: false
       include_language_independent: true
+      specific_languages: {  }
 id: acquia_search_index
 name: 'Acquia Search Solr Index - No Products'
 description: ''
