feature/VYRKCATG-586_and_VYRKCATG-587: Uploaded a patch for Search bugs.

--- a/composer.json
+++ b/composer.json
@@ -298,6 +298,9 @@
             "drupal/migrate_plus": {
                 "https://www.drupal.org/project/migrate_plus/issues/2787157": "https://www.drupal.org/files/issues/2020-10-06/fix_xpath_error-2787157-17.patch"
             },
+            "drupal/search_api_solr": {
+                "https://www.drupal.org/project/search_api_solr/issues/3314711": "https://www.drupal.org/files/issues/2022-10-24/search_api_solr-empty-specific-languages-3314711-21.patch"
+            },
             "drupal/simple_gmap": {
                 "https://www.drupal.org/node/2863979": "https://www.drupal.org/files/issues/2018-11-21/simple_gmap-address-formatter-2863979-36.patch"
             },
