feature/VYRKCATG-586_and_VYRKCATG-587: Added the changes for SATA Brazil for HREFLang.

--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_specifications.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_specifications.yml
@@ -54,7 +54,7 @@ process:
         - ATT584932
         - ATT584376
         - ATT584735
-        - Overall Height
+        - 'Overall Height'
         - ATT584919
         - ATT584926
         - ATT584882
@@ -80,7 +80,7 @@ process:
         - ATT584817
         - ATT249
         - ATT584881
-        - Overall Length
+        - 'Overall Length'
         - ATT552
         - ATT551
         - ATT687592
@@ -132,14 +132,14 @@ process:
         - ATT476
         - ATT250
         - ATT584924
-        - Overall Width
+        - 'Overall Width'
         - ATT345
         - ATT687600
         - ATT584892
         - ATT344
         - ATT789490
         - ATT584763
-        - Catalog Number
+        - 'Catalog Number'
         - ATT659
         - ATT911
         - ATT375
