--- a/config/sata_brazil/default/core.extension.yml
+++ b/config/sata_brazil/default/core.extension.yml
@@ -49,6 +49,7 @@ module:
   entity_reference_revisions: 0
   environment_indicator: 0
   environment_indicator_ui: 0
+  external_hreflang: 0
   field: 0
   field_group: 0
   field_group_settings: 0
