--- a/config/sata_emea/default/sata.settings.yml
+++ b/config/sata_emea/default/sata.settings.yml
@@ -19,4 +19,4 @@ cookiebot_cbid: f12d9173-af9f-4af9-ab43-74bb59153770
 logo_tagline:
   path: 'public://tagline-eu_1.svg'
   use_default: 0
-  url: '/sites/sata_emea/files/tagline-eu_1.svg'
+  url: /sites/sata_emea/files/tagline-eu_1.svg
