feature/VYRKCATG-586_and_VYRKCATG-587: Updated SATA US config.

--- a/config/sata_us/default/system.site.yml
+++ b/config/sata_us/default/system.site.yml
@@ -3,11 +3,11 @@ _core:
 langcode: en
 uuid: de0fd387-4462-441d-9bc4-cce47b4a9e16
 name: SATA
-mail: no-reply@gearwrench.com
+mail: no-reply@satatools.us
 slogan: ''
 page:
   403: /node/3641
-  404: /node/3636
+  404: ''
   front: /node/31
 admin_compact_mode: false
 weight_select_max: 100
