--- a/config/sata_us/default/webform.webform.warranty_replacement_form.yml
+++ b/config/sata_us/default/webform.webform.warranty_replacement_form.yml
@@ -345,10 +345,10 @@ handlers:
       bcc_options: {  }
       cc_mail: ''
       cc_options: {  }
-      from_mail: no-reply@gearwrench.com
+      from_mail: no-reply@satatools.us
       from_options: {  }
       from_name: 'SATA Warranty/Replacement'
-      reply_to: no-reply@gearwrench.com
+      reply_to: no-reply@satatools.us
       return_path: ''
       sender_mail: ''
       sender_name: ''
