--- a/config/sata_us/default/sata.settings.yml
+++ b/config/sata_us/default/sata.settings.yml
@@ -16,8 +16,8 @@ price_spider_country: US
 price_spider_language: en
 price_spider_product_key: 2377-63050130cb2c6c000dda36f9
 logo_tagline:
-  path: 'public://tagline-us.svg'
+  path: 'public://tagline-eu_1.svg'
   use_default: 0
-  url: /sites/sata_us/files/tagline-us.svg
+  url: /sites/sata_us/files/tagline-eu_1.svg
 enable_w1_grid: 0
 cookiebot_cbid: ''
