feature/VYRKCATG-507: Updated the Brazil metatags with the properly translated strings.

--- a/config/sata_brazil/default/metatag.metatag_defaults.node__product_category.yml
+++ b/config/sata_brazil/default/metatag.metatag_defaults.node__product_category.yml
@@ -5,9 +5,9 @@ dependencies: {  }
 id: node__product_category
 label: 'Content: Product Category'
 tags:
-  description: 'Shop SATA Brazil [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  title: 'Shop [node:product_classifications_full_string] from SATA Brazil'
-  og_description: 'Shop SATA Brazil [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  og_title: 'Shop [node:product_classifications_full_string] from SATA Brazil'
-  twitter_cards_description: 'Shop SATA Brazil [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  twitter_cards_title: 'Shop [node:product_classifications_full_string] from SATA Brazil'
+  description: 'Compre SATA Brasil [node:product_classifications_full_string] para o seu próximo trabalho. Faça as coisas e encontre o produto certo para suas necessidades aqui.'
+  og_description: 'Compre SATA Brasil [node:product_classifications_full_string] para o seu próximo trabalho. Faça as coisas e encontre o produto certo para suas necessidades aqui.'
+  og_title: 'Compre [node:product_classifications_full_string] da SATA Brasil'
+  title: 'Compre [node:product_classifications_full_string] da SATA Brasil'
+  twitter_cards_description: 'Compre SATA Brasil [node:product_classifications_full_string] para o seu próximo trabalho. Faça as coisas e encontre o produto certo para suas necessidades aqui.'
+  twitter_cards_title: 'Compre [node:product_classifications_full_string] da SATA Brasil'
