--- a/config/sata_brazil/default/metatag.metatag_defaults.node__product.yml
+++ b/config/sata_brazil/default/metatag.metatag_defaults.node__product.yml
@@ -5,17 +5,17 @@ dependencies: {  }
 id: node__product
 label: 'Content: Product'
 tags:
-  title: '[node:field_long_description] - SATA Brazil'
-  description: 'Count on SATA Brazil to get the job done. Get the [node:field_long_description] here.'
-  og_description: 'Count on SATA Brazil to get the job done. Get the [node:title] [node:field_long_description] here.'
-  og_title: '[node:title] [node:field_long_description] - SATA Brazil'
-  twitter_cards_description: 'Count on SATA Brazil to get the job done. Get the [node:title] [node:field_long_description] here.'
-  twitter_cards_title: '[node:title] [node:field_long_description] - SATA Brazil'
-  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:10:"SATA Brazil";}'
-  schema_product_image: 'a:3:{s:5:"@type";s:11:"ImageObject";s:20:"representativeOfPage";s:4:"True";s:3:"url";s:29:"[node:field_media:entity:url]";}'
-  schema_product_url: '[node:url]'
-  schema_product_type: Product
-  schema_product_name: '[node:field_long_description]'
+  description: 'Conte com a SATA Brasil para fazer o trabalho. Obtenha o [node:field_long_description] aqui.'
+  og_description: 'Conte com a SATA Brasil para fazer o trabalho. Obtenha o [node:field_long_description] aqui.'
+  og_title: '[node:title] [node:field_long_description] - SATA Brasil'
+  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:11:"SATA Brasil";}'
   schema_product_category: '[node:field_product_classifications:0:entity]'
   schema_product_description: '[node:field_product_features]'
+  schema_product_image: 'a:3:{s:5:"@type";s:11:"ImageObject";s:20:"representativeOfPage";s:4:"True";s:3:"url";s:29:"[node:field_media:entity:url]";}'
+  schema_product_name: '[node:field_long_description]'
   schema_product_sku: '[node:title]'
+  schema_product_type: Product
+  schema_product_url: '[node:url]'
+  title: '[node:field_long_description] - SATA Brasil'
+  twitter_cards_description: 'Conte com a SATA Brasil para fazer o trabalho. Obtenha o [node:field_long_description] aqui.'
+  twitter_cards_title: '[node:title] [node:field_long_description] - SATA Brasil'
