feature/VYRKCATG-507: Updated the translations of the meta tags.

--- a/config/sata_colombia/default/metatag.metatag_defaults.node__product_category.yml
+++ b/config/sata_colombia/default/metatag.metatag_defaults.node__product_category.yml
@@ -5,9 +5,9 @@ dependencies: {  }
 id: node__product_category
 label: 'Content: Product Category'
 tags:
-  description: 'Shop SATA Colombia [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  title: 'Shop [node:product_classifications_full_string] from SATA Colombia'
-  og_description: 'Shop SATA Colombia [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  og_title: 'Shop [node:product_classifications_full_string] from SATA Colombia'
-  twitter_cards_description: 'Shop SATA Colombia [node:product_classifications_full_string] for your next job. Get things done and find the right product for your needs here. '
-  twitter_cards_title: 'Shop [node:product_classifications_full_string] from SATA Colombia'
+  description: 'Compre SATA Colombia [node:product_classifications_full_string] para su próximo trabajo. Haga las cosas y encuentre el producto adecuado para sus necesidades aquí.'
+  og_description: 'Compre SATA Colombia [node:product_classifications_full_string] para su próximo trabajo. Haga las cosas y encuentre el producto adecuado para sus necesidades aquí.'
+  og_title: 'Compre [node:product_classifications_full_string] de SATA Colombia'
+  title: 'Compre [node:product_classifications_full_string] de SATA Colombia'
+  twitter_cards_description: 'Compre SATA Colombia [node:product_classifications_full_string] para su próximo trabajo. Haga las cosas y encuentre el producto adecuado para sus necesidades aquí.'
+  twitter_cards_title: 'Compre [node:product_classifications_full_string] de SATA Colombia'
