feature/VYRKCATG-616: Setup a 404 page for SATA US.

--- a/config/sata_us/default/system.site.yml
+++ b/config/sata_us/default/system.site.yml
@@ -7,7 +7,7 @@ mail: no-reply@satatools.us
 slogan: ''
 page:
   403: /node/3641
-  404: ''
+  404: /node/31556
   front: /node/31
 admin_compact_mode: false
 weight_select_max: 100
