Added cookiebot to GW CT US, fixed PS key theme preprocess on CT US AU,

--- a/config/crescenttool/default/config_export_ignore.settings.yml
+++ b/config/crescenttool/default/config_export_ignore.settings.yml
@@ -4,3 +4,4 @@ configuration_names:
   4: 'acquia_connector.settings:spi.site_uuid'
   6: 'search_api.server.acquia_search_server:backend_config.connector_config'
   8: 'webform.webform.*'
+  10: 'crescenttool.settings:cookiebot_cbid'
