Added cookiebot to theme settings config

--- a/config/gearwrench/default/gearwrench.settings.yml
+++ b/config/gearwrench/default/gearwrench.settings.yml
@@ -9,3 +9,4 @@ favicon:
   use_default: 0
   path: themes/custom/gearwrench/favicons/favicon.ico
   mimetype: image/vnd.microsoft.icon
+cookiebot_cbid: ''
