bugfix/translation-updates: Updated the Brazil translations for the Media Types.

--- a/config/sata_brazil/default/field.storage.node.field_media_type.yml
+++ b/config/sata_brazil/default/field.storage.node.field_media_type.yml
@@ -13,16 +13,16 @@ settings:
   allowed_values:
     -
       value: Brochure
-      label: Folheto
+      label: Certificado
     -
       value: Catalog
       label: Catálogo
     -
       value: 'In the News'
-      label: 'Nas noticias'
+      label: Notícia
     -
       value: 'News Release'
-      label: 'Comunicado de imprensa'
+      label: Lâminas
     -
       value: Video
       label: Vídeo
