bugfix/translation-updates: Updated the Colombia Media Type translations.

--- a/config/sata_colombia/default/field.storage.node.field_media_type.yml
+++ b/config/sata_colombia/default/field.storage.node.field_media_type.yml
@@ -13,16 +13,16 @@ settings:
   allowed_values:
     -
       value: Brochure
-      label: Folleto
+      label: Flyer
     -
       value: Catalog
       label: Catalogar
     -
       value: 'In the News'
-      label: 'En las Noticias'
+      label: Certificados
     -
       value: 'News Release'
-      label: 'Comunicado de Prensa'
+      label: Comunicado
     -
       value: Video
       label: Vídeo
