bugfix/tier2-and-3-category-import-issue: Fixed a problem with improper targeting of the parent category for sub-categories.

--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_product_classifications_level_three.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_product_classifications_level_three.yml
@@ -13,8 +13,8 @@ migration_group: crescenttool_au
 label: 'Crescent Australia Product Classifications - Level Three'
 source:
   plugin: url
-  data_fetcher_plugin: http
-  data_parser_plugin: xml
+  data_fetcher_plugin: file
+  data_parser_plugin: simple_xml
   urls: 'public://import/pim_data/pim_export_with_schema.xml'
   namespaces:
     stibo: 'http://www.stibosystems.com/step'
@@ -31,7 +31,7 @@ source:
     -
       name: remote_parent_name
       label: 'Parent Term Name'
-      selector: ../../Classification
+      selector: 'parent::Classification'
   ids:
     remote_term_id:
       type: string
