--- a/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_classifications_level_three.yml
+++ b/config/sata_brazil/default/migrate_plus.migration.sata_brazil_product_classifications_level_three.yml
@@ -29,7 +29,7 @@ source:
     -
       name: remote_parent_name
       label: 'Parent Term Name'
-      selector: ../../Classification
+      selector: 'parent::Classification'
   ids:
     remote_term_id:
       type: string
