bugfix/update-ps: Fixed how we load the PriceSpider widget so that it uses the account ID in the JS URI path. This will help us load the right one. Then I also updated the settings for SATA Co.

--- a/config/sata_colombia/default/sata.settings.yml
+++ b/config/sata_colombia/default/sata.settings.yml
@@ -15,8 +15,10 @@ logo_tagline:
   url: /sites/sata_colombia/files/tagline-co_0.svg
 enable_w1_grid: 0
 price_spider_hide: 0
-price_spider_generic_key: ''
-price_spider_product_key: ''
-price_spider_country: ''
-price_spider_language: ''
+price_spider_generic_key: 5982-6360b6f53451d9000ec755a7
+price_spider_product_key: 63050130cb2c6c000dda36f9
+price_spider_country: US
+price_spider_language: en
 cookiebot_cbid: ''
+price_spider_account_key: '5982'
+price_spider_reviews_key: ''
