--- a/docroot/themes/custom/sata/sata.libraries.yml
+++ b/docroot/themes/custom/sata/sata.libraries.yml
@@ -109,7 +109,7 @@ library--price-spider:
   version: 1.x
   js:
     //cdn.pricespider.com/1/lib/ps-widget.js: { type: external, attributes: { async: true } }
-    //cdn.pricespider.com/1/5366/ps-utid.js: { type: external, attributes: { async: true } }
+    //cdn.pricespider.com/1/ACCOUNT_KEY/ps-utid.js: { type: external, attributes: { async: true } }
 
 library--add-to-any:
   version: 1.x
