feature/add-translation-permissions: Added permissions for translation.

--- a/config/sata_brazil/default/sata.settings.yml
+++ b/config/sata_brazil/default/sata.settings.yml
@@ -16,7 +16,7 @@ logo_tagline:
 enable_w1_grid: 1
 price_spider_hide: 0
 price_spider_generic_key: ''
-price_spider_product_key: 5817-6318e46d2c97ab002f84214e
-price_spider_country: BR
-price_spider_language: pt
+price_spider_product_key: ''
+price_spider_country: ''
+price_spider_language: ''
 cookiebot_cbid: ''
