--- a/config/sata_colombia/default/config_export_ignore.settings.yml
+++ b/config/sata_colombia/default/config_export_ignore.settings.yml
@@ -18,3 +18,4 @@ configuration_names:
   32: 'sata.settings:logo.use_default'
   34: 'sata.settings:logo.path'
   36: 'sata.settings:enable_w1_grid'
+  38: 'sata.settings:price_spider_generic_product_button'
