--- a/config/sata_colombia/default/config_ignore.settings.yml
+++ b/config/sata_colombia/default/config_ignore.settings.yml
@@ -23,3 +23,4 @@ ignored_config_entities:
   - 'sata.settings:logo.use_default'
   - 'sata.settings:logo.path'
   - 'sata.settings:enable_w1_grid'
+  - 'sata.settings:price_spider_generic_product_button'
