CT & GW US Added cookiebot id to sata.settings config

--- a/config/crescenttool/default/crescenttool.settings.yml
+++ b/config/crescenttool/default/crescenttool.settings.yml
@@ -9,4 +9,4 @@ favicon:
   use_default: 0
   path: themes/custom/crescenttool/favicons/favicon.ico
   mimetype: image/vnd.microsoft.icon
-cookiebot_cbid: ''
+cookiebot_cbid: '82c5b4ed-4991-4970-962d-c8b653ae82c2'
