--- a/config/gearwrench/default/gearwrench.settings.yml
+++ b/config/gearwrench/default/gearwrench.settings.yml
@@ -9,4 +9,4 @@ favicon:
   use_default: 0
   path: themes/custom/gearwrench/favicons/favicon.ico
   mimetype: image/vnd.microsoft.icon
-cookiebot_cbid: ''
+cookiebot_cbid: '707cee35-0174-4156-959c-f868344ef453'
