bugfix/prod-deploy-script: Fixed a few translations.

--- a/config/sata_brazil/default/views.view.media_pages.yml
+++ b/config/sata_brazil/default/views.view.media_pages.yml
@@ -232,7 +232,7 @@ display:
           exposed: true
           expose:
             operator_id: field_media_type_value_op
-            label: Modelo
+            label: Tipo
             description: ''
             use_operator: false
             operator: field_media_type_value_op
