--- a/config/sata_colombia/default/views.view.media_pages.yml
+++ b/config/sata_colombia/default/views.view.media_pages.yml
@@ -232,7 +232,7 @@ display:
           exposed: true
           expose:
             operator_id: field_media_type_value_op
-            label: Type
+            label: Tipo
             description: ''
             use_operator: false
             operator: field_media_type_value_op
@@ -276,7 +276,7 @@ display:
           exposed: true
           expose:
             operator_id: field_category_target_id_op
-            label: Category
+            label: Categoría
             description: ''
             use_operator: false
             operator: field_category_target_id_op
