Added verification to config

--- a/config/sata_brazil/default/metatag.metatag_defaults.global.yml
+++ b/config/sata_brazil/default/metatag.metatag_defaults.global.yml
@@ -44,3 +44,4 @@ tags:
   twitter_cards_page_url: '[current-page:url]'
   twitter_cards_title: '[node:title]'
   twitter_cards_type: summary
+  google_site_verification: '9FxWwZgRHUsqjEWKyNQ9WJqL3e1sselX4czGNmsiiDU'
