--- a/config/sata_us/default/metatag.metatag_defaults.global.yml
+++ b/config/sata_us/default/metatag.metatag_defaults.global.yml
@@ -41,5 +41,6 @@ tags:
   twitter_cards_page_url: '[current-page:url]'
   twitter_cards_type: summary
   twitter_cards_title: '[node:title]'
+  google_site_verification: 'aizNKju355sQyFZdFQjjuuppGBLmxRbKcdOEafjLJg8'
   mask_icon:
     href: '[theme-filter:path-to-theme]/favicons/icon.svg'
