--- a/config/sata_colombia/default/metatag.metatag_defaults.global.yml
+++ b/config/sata_colombia/default/metatag.metatag_defaults.global.yml
@@ -45,3 +45,4 @@ tags:
   twitter_cards_page_url: '[current-page:url]'
   twitter_cards_title: '[node:title]'
   twitter_cards_type: summary
+  google_site_verification: 'UlKphXqbHw5X4NpHLyzbOUlDtXyFLTMA9X8aIi2LvJg'
