emea google verification

--- a/config/sata_emea/default/metatag.metatag_defaults.global.yml
+++ b/config/sata_emea/default/metatag.metatag_defaults.global.yml
@@ -22,6 +22,7 @@ tags:
   apple_touch_icon_precomposed_72x72: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-72x72-precomposed.png'
   apple_touch_icon_precomposed_76x76: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-76x76-precomposed.png'
   canonical_url: '[current-page:url]'
+  google_site_verification: AHG9ScUJl4lytQBFP41me1r5JmefHmWfH7gLeAvoieY
   hreflang_external: "bg-BG|[node:url]\r\ncs-CZ|[node:url]\r\nda-DK|[node:url]\r\nfi-FI|[node:url]\r\nde-DE|[node:url]\r\nak-GH|[node:url]\r\nhu-HU|[node:url]\r\nit-IT|[node:url]\r\nar-SA|[node:url]\r\nlt-LT|[node:url]\r\ndv-MV|[node:url]\r\nar-OM|[node:url]\r\nur-PK|[node:url]\r\npl-PL|[node:url]\r\nro-RO|[node:url]\r\nsk-SI|[node:url]\r\nsw-TZ|[node:url]\r\nar-AE|[node:url]\r\nen-GB|[node:url]"
   hreflang_xdefault: '[current-page:url]'
   icon_16x16: '[theme-filter:path-to-theme]/favicons/icon-16x16.png'
@@ -45,4 +46,3 @@ tags:
   twitter_cards_page_url: '[current-page:url]'
   twitter_cards_title: '[node:title]'
   twitter_cards_type: summary
-  google_site_verification: 'AHG9ScUJl4lytQBFP41me1r5JmefHmWfH7gLeAvoieY'
