feature/update-ct-au-cats: Updated the categories for CT AU.

--- a/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_product_category_pages_level_three.yml
+++ b/config/crescenttool_au/default/migrate_plus.migration.crescenttool_au_product_category_pages_level_three.yml
@@ -42,32 +42,7 @@ process:
     source: remote_id
     method: row
     value:
-      - W3_729189
-      - W3_729190
-      - W3_729191
-      - W3_729192
-      - W3_729193
-      - W3_729194
-      - W3_729195
-      - W3_729196
-      - W3_729197
-      - W3_729198
-      - W3_729892
-      - W3_729199
-      - W3_729200
-      - W3_729201
-      - W3_729202
-      - W3_729203
-      - W3_729204
-      - W3_729205
-      - W3_729206
-      - W3_729208
-      - W3_729209
-      - W3_729210
-      - W3_729211
-      - W3_743707
-      - W3_743708
-      - W3_743710
+      - NONE
   type:
     plugin: default_value
     default_value: product_category
