APS-2 Local environment setup with DDEV

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Ignore sensitive and environment-specific information
 /docroot/sites/default/settings.php
+/docroot/sites/*/settings.ddev.php
 /docroot/sites/*/settings.docksal.php
 /docroot/sites/*/settings.local.php
 
