--- a/drush/sites/sata_brazil.site.yml
+++ b/drush/sites/sata_brazil.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.sataferramentas.com.br.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/sata_brazil
+  uri: https://sata-brazil-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
