--- a/drush/sites/apex-tools.site.yml
+++ b/drush/sites/apex-tools.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.apex-tools.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/apex-tools
+  uri: https://apex-tools-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
