--- a/drush/sites/crescenttool.site.yml
+++ b/drush/sites/crescenttool.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.crescenttool.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/crescenttool
+  uri: https://crescenttool-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
