--- a/drush/sites/crescenttool_au.site.yml
+++ b/drush/sites/crescenttool_au.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.crescenttool.com.au.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/crescenttool_au
+  uri: https://crescenttool-au-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
