--- a/drush/sites/gearwrench.site.yml
+++ b/drush/sites/gearwrench.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.gearwrench.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/gearwrench
+  uri: https://gearwrench-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
