--- a/drush/sites/sata_emea.site.yml
+++ b/drush/sites/sata_emea.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.satatools.eu.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/sata_emea
+  uri: https://sata-emea-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
