--- a/drush/sites/sata_us.site.yml
+++ b/drush/sites/sata_us.site.yml
@@ -2,6 +2,10 @@ local:
   site-env: local
   root: /var/www/docroot
   uri: http://www.satatools.us.docksal
+local_ddev:
+  site-env: ddev
+  root: /var/www/html/web/sites/sata_us
+  uri: https://sata-us-local.ddev.site
 remote_dev:
   site-env: dev
   host: apextoolgroupdev.ssh.prod.acquia-sites.com
