--- a/config/campbell/local/stage_file_proxy.settings.yml
+++ b/config/campbell/local/stage_file_proxy.settings.yml
@@ -1,7 +1,7 @@
 _core:
   default_config_hash: ttd8HXcqwSjGgp-fWA3gUA8q4TNvXB0a72pkFlnF56g
 hotlink: false
-origin: 'https://dev-www.campbellchainandfittings.com'
+origin: ''
 origin_dir: ''
 use_imagecache_root: true
 verify: true
