APEX-3:Added config split files in repo
reverted changes

reverted changes 2

--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -1,6 +1,8 @@
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
+  acquia_connector: 0
+  acquia_purge: 0
   address: 0
   admin_toolbar: 0
   atg_api: 0
@@ -39,6 +41,8 @@ module:
   ctools: 0
   ctools_block: 0
   datetime: 0
+  dblog: 0
+  devel: 0
   drupalmoduleupgrader: 0
   dynamic_entity_reference: 0
   dynamic_page_cache: 0
@@ -98,6 +102,8 @@ module:
   path: 0
   path_alias: 0
   pdfpreview: 0
+  purge: 0
+  purge_queuer_coretags: 0
   quick_node_clone: 0
   quickedit: 0
   rabbit_hole: 0
@@ -113,8 +119,10 @@ module:
   search_api_db: 0
   serialization: 0
   sfweb2lead_webform: 0
+  shield: 0
   shortcut: 0
   sophron: 0
+  stage_file_proxy: 0
   step: 0
   swiftmailer: 0
   system: 0
