--- a/config/campbell/default/core.entity_view_display.node.news.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.news.default.yml
@@ -45,20 +45,34 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_media:
+    type: entity_reference_label
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 1
+    region: content
   field_news_release_document:
     type: entity_reference_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: false
+    third_party_settings: {  }
+    weight: 5
+    region: content
+  field_sub_heading:
+    type: string
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
     weight: 4
     region: content
 hidden:
   field_is_featured: true
-  field_media: true
   field_news_type: true
-  field_sub_heading: true
   langcode: true
   links: true
   search_api_excerpt: true
