Completed the mega menu for camobell.

--- a/composer.json
+++ b/composer.json
@@ -164,8 +164,10 @@
         "drupal/video_embed_field": "^2.0",
         "drupal/views_data_export": "^1.2",
         "drupal/views_taxonomy_term_name_into_id": "^1.0@alpha",
+        "drupal/views_tree": "^2.0@RC",
         "drupal/viewsreference": "^2.0@alpha",
         "drupal/viewsreference_filter": "^1.0.3",
+        "drupal/we_megamenu": "^1.13",
         "drupal/webform": "^6.0",
         "drupal/webform_mailchimp": "^5.9",
         "drush/drush": "10.6.2",
