--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -115,7 +115,10 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_taxonomy_term_name_into_id: 0
+  views_tree: 0
   viewsreference: 0
+  we_megamenu: 0
   limited_field_widgets: 1
   pathauto: 1
   views: 10
