--- a/docroot/themes/custom/campbell/campbell.info.yml
+++ b/docroot/themes/custom/campbell/campbell.info.yml
@@ -3,12 +3,19 @@ type: theme
 base theme: classy
 description: A D9 theme for Campbell Site.
 package: ATG
-core: 8.x
+#core: 8.x
 core_version_requirement: ^8 || ^9
 logo: icons/logo.svg
 screenshot: campbell.png
+
 libraries:
   - campbell/global
+
+libraries-override:
+  # Replace an asset with another.
+  we_megamenu/form.we-mega-menu-frontend:
+    js:
+     assets/js/we_mobile_menu.js: js/megamenu.js
 
 regions:
   top_page: 'Page top'
