--- a/composer.json
+++ b/composer.json
@@ -349,6 +349,9 @@
             "vmlyr-drupal/kit-drush-commands": {
                 "https://github.com/VMLYR/Drupal-KIT-Drush-Commands/issues/15": "https://github.com/VMLYR/Drupal-KIT-Drush-Commands/files/9203528/sync_fix.diff.txt"
             },
+            "vmlyr-drupal/kit-docksal-commands": {
+                "CLECO(atg) theme deployment setup" : "patches/atg-custom-theme-setup.patch"
+            },
             "drupal/content_sync": {
                 "https://www.drupal.org/project/content_sync/issues/3270665": "https://www.drupal.org/files/issues/2022-04-21/3270665_php8_compatibility.patch"
             }
