APEX-3 : Added modules entry in core.extension

--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -2,7 +2,12 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   address: 0
+  acquia_purge: 0
+  acquia_search: 0
   admin_toolbar: 0
+  advagg: 0
+  advagg_js_minify: 0
+  advagg_css_minify: 0
   atg_api: 0
   atg_callout: 0
   atg_ckeditor: 0
@@ -98,6 +103,8 @@ module:
   path: 0
   path_alias: 0
   pdfpreview: 0
+  purge: 0
+  purge_queuer_coretags: 0
   quick_node_clone: 0
   quickedit: 0
   rabbit_hole: 0
@@ -111,6 +118,7 @@ module:
   search: 0
   search_api: 0
   search_api_db: 0
+  search_api_solr: 0
   serialization: 0
   sfweb2lead_webform: 0
   shortcut: 0
