--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -2,9 +2,13 @@ _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
   acquia_connector: 0
+  acquia_search: 0
   acquia_purge: 0
   address: 0
   admin_toolbar: 0
+  advagg: 0
+  advagg_css_minify: 0
+  advagg_js_minify: 0
   atg_api: 0
   atg_callout: 0
   atg_ckeditor: 0
@@ -43,6 +47,7 @@ module:
   datetime: 0
   dblog: 0
   devel: 0
+  devel_generate: 0
   drupalmoduleupgrader: 0
   dynamic_entity_reference: 0
   dynamic_page_cache: 0
@@ -116,6 +121,7 @@ module:
   rh_user: 0
   search: 0
   search_api: 0
+  search_api_solr: 0
   search_api_db: 0
   serialization: 0
   sfweb2lead_webform: 0
