APX-132: Homepage slider implementation
Completed the slider theming

--- a/composer.json
+++ b/composer.json
@@ -356,6 +356,9 @@
             },
             "drupal/content_sync": {
                 "https://www.drupal.org/project/content_sync/issues/3270665": "https://www.drupal.org/files/issues/2022-04-21/3270665_php8_compatibility.patch"
+            },
+            "drupal/we_megamenu": {
+                "https://www.drupal.org/project/we_megamenu/issues/3226361": "https://www.drupal.org/files/issues/2022-05-30/3226361_10.patch"
             }
 
         },
