--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -27,6 +27,13 @@ global:
   js:
     js/main.js: {}
 
+slider:
+  css:
+    theme:
+      //cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css: { type: external, minified: true }
+  js:
+    //cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js: { type: external, minified: true }
+
   dependencies:
     - core/jquery
     - core/js-cookie
